chore: changed dark-blue color & some borders

--- a/app/assets/stylesheets/dmpopidor/_colours.scss
+++ b/app/assets/stylesheets/dmpopidor/_colours.scss
@@ -1,5 +1,5 @@
 $blue: #2c7dad;
-$dark-blue: #1c5170;
+$dark-blue: #172849;
 $light-blue: #6ba4c5;
 $very-light-blue: #c8e1f1;
 $very-very-light-blue: #edf5fa;
