chore: changed 'add contributor' text on research output tab

--- a/app/views/branded/research_outputs/_list.html.erb
+++ b/app/views/branded/research_outputs/_list.html.erb
@@ -66,7 +66,7 @@
               <a href="<%= plan_contributors_path(@plan) %>" target="_blank"
                  class="contributor-link"
                  aria-hidden="true" data-toggle="tooltip" 
-                 data-original-title="<%= _('Add a person in the Contributors tab') %>">
+                 data-original-title="<%= _('Add a person in the Contributors tab. Please save before clicking on +') %>">
                   <i class="fas fa-plus"></i>
               </a>
             </div>
