--- a/app/assets/stylesheets/dmptool_v5/overrides.scss
+++ b/app/assets/stylesheets/dmptool_v5/overrides.scss
@@ -592,6 +592,12 @@ button.dropdown-toggle {
   margin-bottom: 10px;
 }
 
+div.related_works div.citation,
+div.add-related-work {
+  margin-bottom: 20px;
+}
+
+
 #editorial-board div.row {
   margin-bottom: 25px;
 }
