--- a/app/views/branded/related_identifiers/_edit.html.erb
+++ b/app/views/branded/related_identifiers/_edit.html.erb
@@ -24,7 +24,7 @@ tooltip = _('Add another research output to this plan.')
             <% end %>
 
             <% if related_identifier.citation.present? && related_identifier.citation&.downcase != 'not available' %>
-              <%= sanitize(related_identifier.citation) %>
+              <%= sanitize(related_identifier.citation.strip) %>
 
             <% else %>
               <%= related_identifier.work_type&.humanize %>:&nbsp;
@@ -58,7 +58,7 @@ tooltip = _('Add another research output to this plan.')
   </div>
   <% if plan.administerable_by?(current_user.id) || (current_user.can_org_admin? && current_user.org.plans.include?(plan)) %>
     <div class="add-related-work col-md-4">
-      <button class="btn btn-default" title="<%= tooltip %>" data-toggle="tooltip"><%= _('Add a research output') %></button>
+      <button class="btn btn-default"><%= _('Add a research output') %></button>
     </div>
   <% end %>
   <div class="row related-works-save-btn">
