--- a/app/views/branded/static_pages/editorial_board.html.erb
+++ b/app/views/branded/static_pages/editorial_board.html.erb
@@ -32,7 +32,7 @@
     <div class="row">
       <div class="col-md-2"><%= image_tag "ExnerHeadshot.JPG", alt: 'Nina Exner photo' %></div>
       <div class="col-md-10 board-bio">
-        <strong>Nina Exner</strong><br>Research Data Librarian, Virginia Commonwealth University
+        <strong>Nina Exner, PhD</strong><br>Research Data Librarian, Virginia Commonwealth University
       </div>
     </div>
     <div class="row">
@@ -69,7 +69,7 @@
     <div class="row">
       <div class="col-md-2"><%= image_tag "Sackmann_Anna_hr.jpg", alt: 'Anna Sackmann photo' %></div>
       <div class="col-md-10 board-bio">
-        <strong>Anna Sackmann</strong><br>Science Data & Engineering Libraria, University of California, Berkeley
+        <strong>Anna Sackmann</strong><br>Science Data & Engineering Librarian, University of California, Berkeley
       </div>
     </div>
     <div class="row">
