refactor: changing account creation location & enlarge connection popover

--- a/app/views/branded/layouts/_signin_signout.html.erb
+++ b/app/views/branded/layouts/_signin_signout.html.erb
@@ -120,7 +120,7 @@
       <div class="tab-content">
         <div id="sign-in-form-menu" role="tabpanel" class="tab-pane active">
           <div class="panel panel-default">
-            <div class="panel-body">
+            <div class="panel-body" style="width: 400px">
               <%= render :partial => 'shared/sign_in_form_header' %>
             </div>
           </div>
