--- a/app/views/branded/home/index.html.erb
+++ b/app/views/branded/home/index.html.erb
@@ -27,7 +27,7 @@ The home page should show the initial User sign in / sign up form
 
   <%
   icon_grid = [
-	  { icon: asset_path('icon-1.svg'), text: _('Cusomization tools for reseachers and institutions') },
+	  { icon: asset_path('icon-1.svg'), text: _('Customization tools for researchers and institutions') },
 	  { icon: asset_path('icon-2.svg'), text: _('A mechanism for registering a DMP ID') },
     { icon: asset_path('icon-3.svg'), text: _('Best practice guidance to ensure plans are structured and optimized') },
     { icon: asset_path('icon-4.svg'), text: _('Participating organizations can provide feedback on plans') },
@@ -83,7 +83,7 @@ The home page should show the initial User sign in / sign up form
       <div class="benefit-cards">
         <div class="card">
           <h3><%= _('Funders') %></h3>
-          <p><%= _('Promote best practices in research data managment and sharing') %></p>
+          <p><%= _('Promote best practices in research data management and sharing') %></p>
           <p><%= _('Ensure your requirements are met with funder-specific templates') %></p>
           <p><%= _('Enrich your organization’s research graph to track research outcomes') %></p>
         </div>
