--- a/app/views/branded/layouts/_footer.html.erb
+++ b/app/views/branded/layouts/_footer.html.erb
@@ -72,7 +72,7 @@
     </span>
     <span>
       <%= link_to("http://www.cnrs.fr/", title: _("CNRS website") + " - " + _("Opens in new window"), target: '_blank')  do %>
-        <%= image_tag("cnrs_blanc.gif", alt: 'CNRS logo (opens in a new window)') %>
+        <%= image_tag("cnrs_blanc.png", alt: 'CNRS logo (opens in a new window)') %>
       <% end %>
     </span>
     <span>
