--- a/app/views/branded/layouts/_navigation.html.erb
+++ b/app/views/branded/layouts/_navigation.html.erb
@@ -8,6 +8,9 @@
       <span class="icon-bar"></span>
     </button>
     <div class="header-logo">
+      <%= link_to("http://www.cnrs.fr/", title: _("CNRS website") + " - " + _("Opens in new window"), target: '_blank')  do %>
+        <%= image_tag("cnrs.png", alt: 'CNRS logo (opens in a new window)', class: "app-logo navbar-brand") %>
+      <% end %>
       <%= link_to(image_tag("logo.png", alt: "#{ApplicationService.application_name} #{_('logo')}" ,
         class: "app-logo navbar-brand" , title: ApplicationService.application_name), root_path) %>
     </div>
