style: adding underline tag on create account link

--- a/app/views/branded/shared/_sign_in_form.html.erb
+++ b/app/views/branded/shared/_sign_in_form.html.erb
@@ -16,7 +16,7 @@
 
   <p class="fontsize-h3"><%= _('Individual Access')%></p>
   <div style="font-size: 14px; margin: -5px 0 10px 0">
-    <%= _('Not registered yet?') %> <a href="<%= login_path %>?place=signup#content"><%= _('Create my account') %></a>
+    <%= _('Not registered yet?') %> <u><a href="<%= login_path %>?place=signup#content"><%= _('Create my account') %></a></u>
   </div>
   <div class="form-group">
     <%= f.label(:email, _('Email'), class: 'control-label') %>
