--- a/app/views/branded/layouts/_header.html.erb
+++ b/app/views/branded/layouts/_header.html.erb
@@ -16,7 +16,7 @@
       <%= render partial: "layouts/branding" , locals: {max_number_links: Rails.configuration.x.max_number_links_funder} %>
     <% else %>
       <span class="homepage-h1"><%= _('Effectively describing the life of your data to ensure its future') %></span>
-      <span class="homepage-h2"><%= _('DMP OPIDoR – an active tool and just as active support to help plan your data management in harmony with your community’s practices.') %></span>
+      <span class="homepage-h2"><%= _('DMP OPIDoR – an active support tool to help plan your data management in harmony with your community’s practices.') %></span>
     <% end %>
   </div>
 
