--- a/app/views/phases/_edit_plan_answers.html.erb
+++ b/app/views/phases/_edit_plan_answers.html.erb
@@ -1,4 +1,4 @@
-<div class="tab-panels" role="tabpanel">
+<div class="tab-panels" role="tabpanel" style="width: 100%">
   <div id="phase-#<%= phase.id %>-panel" class="tab-panel active answering-phase" aria-hidden="false" aria-labelledby="phase-#<%= phase.id %>-tab">
     <div class="row">
       <div class="col-md-8">
