--- a/app/views/branded/shared/export/_export_by_question.erb
+++ b/app/views/branded/shared/export/_export_by_question.erb
@@ -51,7 +51,8 @@
           <% end %>
           <p><%= sanitize ah['text'] %></p>
           <br/>
-        <% elsif question[:format].structured? && fragment.present? %>
+        <% end %>
+        <% if @plan.template.structured? && fragment.present? %>
           <%= render partial: 'shared/export/display_madmp_fragment', 
                       locals: {
                           fragment: fragment,
