--- a/app/views/branded/shared/export/_export_by_research_output.erb
+++ b/app/views/branded/shared/export/_export_by_research_output.erb
@@ -54,7 +54,8 @@
             <% end %>
             <p><%= sanitize ah['text'] %></p>
             <br/>
-          <% elsif question[:format].structured? && fragment.present? %>
+          <% end %>
+          <% if @plan.template.structured? && fragment.present? %>
             <%= render partial: 'shared/export/display_madmp_fragment', 
                         locals: {
                             fragment: fragment,
