--- a/app/views/branded/shared/export/_plan_styling.erb
+++ b/app/views/branded/shared/export/_plan_styling.erb
@@ -142,4 +142,12 @@
     width: 100%;
   }
 
+  .fragment-list-display > table {
+    width: 100%;
+    padding: 5px 20px;
+    margin-bottom: 5px;
+    border: none;
+    border-left: 2px solid #1c5170;
+  }
+
 </style>
