--- a/app/views/branded/phases/edit.html.erb
+++ b/app/views/branded/phases/edit.html.erb
@@ -11,7 +11,8 @@
       "templateId": <%= template.id %>,
       "userId": <%= @current_user.id %>,
       "currentOrgId": <%= current_user.org.id %>,
-      "currentOrgName": "<%= current_user.org.name %>"
+      "currentOrgName": "<%= current_user.org.name %>",
+      "readonly": <%= !@plan.editable_by?(current_user.id) %>
     }'/>
   <% else %>
     <%= render partial: 'phases/edit_plan_answers',
