--- a/app/views/branded/layouts/application.html.erb
+++ b/app/views/branded/layouts/application.html.erb
@@ -76,7 +76,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="keywords" content="plan de gestion de données, PGD, data management plan, DMP, OPIDoR, H2020, Horizon2020, CNRS, INIST, ANR, software management plan, SMP, CNRS">
-    <meta name="description" content="DMP OPIDoR vous accompagne à travers l’élaboration et la mise en pratique de plans de gestion de données et de logiciels.">
+    <meta name="description" content="DDMP OPIDoR vous accompagne à travers l’élaboration et la mise en pratique de plans de gestion de données, logiciels et autres.">
 
   </head>
   <body>
