fix: adding r on target props

--- a/app/views/branded/layouts/_footer.html.erb
+++ b/app/views/branded/layouts/_footer.html.erb
@@ -16,21 +16,21 @@
   </div>
   <div class="footer-col">
     <span class="footer-col-title"><%= _('Navigation') %></span>
-    <span><a href="<%= help_path+'#content' %>" taget="_blank"><%= _('Help') %></a></span>
-    <span><a href="<%= public_templates_path+'#content' %>" taget="_blank"><%= _('DMP Templates') %></a></span>
-    <span><a href="<%= news_feed_path+'#content' %>" taget="_blank"><%= _('News') %></a></span>
+    <span><a href="<%= help_path+'#content' %>" target="_blank"><%= _('Help') %></a></span>
+    <span><a href="<%= public_templates_path+'#content' %>" target="_blank"><%= _('DMP Templates') %></a></span>
+    <span><a href="<%= news_feed_path+'#content' %>" target="_blank"><%= _('News') %></a></span>
     <span>
       <a href="https://opidor.fr/category/dmp-faq/" title="DMPOPIDoR FAQ - <%= _("Opens in new window") %>" target="_blank">
         <%= _('FAQ') %>
       </a>
     </span>
-    <span><a href="<%= contact_us+'#content' %>" taget="_blank"><%= _('Contact Us') %></a></span>
+    <span><a href="<%= contact_us+'#content' %>" target="_blank"><%= _('Contact Us') %></a></span>
   </div>
   <div class="footer-col">
     <span class="footer-col-title"><%= _('About') %></span>
-    <span><a href="<%= about_us_path+'#content' %>" taget="_blank"><%= _('About') %></a></span>
-    <span><a href="<%= terms_path+'#content' %>" taget="_blank"><%= _('Terms of use') %></a></span>
-    <span><a href="<%= privacy_path+'#content' %>" taget="_blank"><%= _('Privacy statement') %></a></span>
+    <span><a href="<%= about_us_path+'#content' %>" target="_blank"><%= _('About') %></a></span>
+    <span><a href="<%= terms_path+'#content' %>" target="_blank"><%= _('Terms of use') %></a></span>
+    <span><a href="<%= privacy_path+'#content' %>" target="_blank"><%= _('Privacy statement') %></a></span>
     <span>
       <a title="DMPOPIDoR Github - <%= _("Opens in new window") %>" target="_blank" href="<%= Rails.configuration.x.application.url %>" target="_blank">
         Github <i class="fab fa-github"></i>
