fix: tooltip position in share form

--- a/app/views/branded/plans/_share_form.html.erb
+++ b/app/views/branded/plans/_share_form.html.erb
@@ -87,7 +87,7 @@
                       'data-toggle': 'tooltip',
                       'data-html': true,
                       title: permissions_tooltip,
-                      'data-placement':'right' do %>
+                      'data-placement':'bottom' do %>
         <%= content_tag :legend , _('Permissions'), class: 'legend-label' %>
         <div class="form-group">
           <div class="radio">
