refactor: adding api documentation link

--- a/app/views/branded/layouts/_footer.html.erb
+++ b/app/views/branded/layouts/_footer.html.erb
@@ -25,6 +25,7 @@
       </a>
     </span>
     <span><a href="<%= contact_us+'#content' %>" target="_blank"><%= _('Contact Us') %></a></span>
+    <span><a href="/api-docs/index.html" target="_blank"><%= _('API Documentation') %></a></span>
   </div>
   <div class="footer-col">
     <span class="footer-col-title"><%= _('About') %></span>
