--- a/app/views/branded/home/_welcome.html.erb
+++ b/app/views/branded/home/_welcome.html.erb
@@ -10,6 +10,6 @@
     </div>
   </div>
   <div class="row">
-    <dmp-news-page props-json='{ "locale": "<%= locale %>" } '/>
+    <%= react("NewsPageLayout", props: { locale: locale }) %>
   </div>
 </div>
