--- a/app/views/branded/plans/new.html.erb
+++ b/app/views/branded/plans/new.html.erb
@@ -1,14 +1,14 @@
 <% if current_user.org.active? %>
-  <dmp-plan-creation props-json='{
-    "locale": "<%= I18n.locale.to_s %>",
-    "currentOrgId": <%= current_user.org.id %>,
-    "currentOrgName": "<%= current_user.org.name %>"
-  }'/>
+  <%= react("PlanCreationLayout", props: { 
+    locale: locale,
+    currentOrgId: current_user.org.id,
+    currentOrgName: current_user.org.name
+  }) %>
 <% else%>
-<div class="alert alert-danger">
-  <span class="fas fa-exclamation-circle"></span>
-  <span>
-    <%= _('Your organisation has been deactivated. Please choose a new organisation from your <a href="/users/edit">user profile</a>.').html_safe %>
-  </span>
-</div>
+  <div class="alert alert-danger">
+    <span class="fas fa-exclamation-circle"></span>
+    <span>
+      <%= _('Your organisation has been deactivated. Please choose a new organisation from your <a href="/users/edit">user profile</a>.').html_safe %>
+    </span>
+  </div>
 <% end %>
