fix: added localized version for dmp visit

--- a/app/views/branded/home/_welcome.html.erb
+++ b/app/views/branded/home/_welcome.html.erb
@@ -4,8 +4,8 @@
       <%= _('News') %>
     </h1>
     <div class="dmp-visit">
-      <h2>Première visite chez nous ?</h2>
-      <p>Découvrez DMP OPIDoR en 1 min !</p>
+      <h2><%= _('First time visiting?') %></h2>
+      <p><%= _('Discover DMP OPIDoR in 180s!') %></p>
       <i class="fa fa-circle-play" aria-hidden="true"></i>
     </div>
   </div>
