translation : import & react components

--- a/app/views/branded/plans/import.html.erb
+++ b/app/views/branded/plans/import.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-12">
     <h1><%= _('Import DMP') %></h1>
     <span>
-      <%= _("This feature is only available for structured templates.") %>
+      <%= _("This feature is currently only available for structured DMPs created in the context of a research project.") %>
     </span>
   </div>
 </div>
