chore: updated translations

--- a/app/views/branded/home/_welcome.html.erb
+++ b/app/views/branded/home/_welcome.html.erb
@@ -5,7 +5,7 @@
     </h1>
     <div class="dmp-visit">
       <h2><%= _('First time visiting?') %></h2>
-      <p><%= _('Discover DMP OPIDoR in 180s!') %></p>
+      <p><%= _('Discover DMP OPIDoR in three minutes!') %></p>
       <i class="fa fa-circle-play" aria-hidden="true"></i>
     </div>
   </div>
