--- a/app/views/branded/plans/_dmp_id_minter.html.erb
+++ b/app/views/branded/plans/_dmp_id_minter.html.erb
@@ -9,7 +9,7 @@ if current_user == plan.owner
   orcid_link = "<a href=\"#{orcid&.value}\" target=\"_blank\" aria-label=\"link to ORCID record\">ORCID record</a>"
 end
 
-project_details_link = link_to(_('Project Details'), edit_plan_path(plan.id))
+project_details_link = link_to(_('Project Details'), plan_path(plan.id))
 dmp_id_url = 'https://github.com/CDLUC3/dmptool/wiki/DMP-IDs-and-Networked-Data-Management-Plans-(maDMPs)#why-are-ids-for-dmps-important'
 
 # Minting is only allowed if the plan is 'complete', it is not a test, has a funder and the user can administer
@@ -43,7 +43,7 @@ allow_minting = orcid.present? && orcid_access_token.present? if allow_minting &
           </li>
           <li>
             <% if plan.complete? %><span class="fa fa-check green"><span class="sr-only">Complete: </span></span><% else %><span class="fa fa-times red"><span class="sr-only">Incomplete: </span></span><% end %>
-            <%= (_("answered at least %{percentage}%% of questions on the %{write_plan_link} panel") % { percentage: Rails.configuration.x.plans.default_percentage_answered, write_plan_link: link_to(_('Write Plan'), edit_plan_path(plan.id, phase: plan.phases&.first&.id)) }).html_safe %>
+            <%= (_("have answered at least %{percentage}%% of questions on the %{write_plan_link} panel") % { percentage: Rails.configuration.x.plans.default_percentage_answered, write_plan_link: link_to(_('Write Plan'), edit_plan_path(plan.id, phase: plan.phases&.first&.id)) }).html_safe %>
           </li>
           <li>
             <% if plan.funder_id.present? %><span class="fa fa-check green"><span class="sr-only">Complete: </span></span><% else %><span class="fa fa-times red"><span class="sr-only">Incomplete: </span></span><% end %>
@@ -61,7 +61,7 @@ allow_minting = orcid.present? && orcid_access_token.present? if allow_minting &
           <% end %>
           <li>
             <% if !plan.is_test? %><span class="fa fa-check green"><span class="sr-only">Complete: </span></span><% else %><span class="fa fa-times red"><span class="sr-only">Incomplete: </span></span><% end %>
-            <%= (_("plan is not flagged as a mock project on the %{project_details_link} panel") % { project_details_link: project_details_link }).html_safe %>
+            <%= (_("make sure the plan is not flagged as a mock project on the %{project_details_link} panel") % { project_details_link: project_details_link }).html_safe %>
           </li>
         </ul>
       </legend>
