--- a/app/views/branded/plans/_visibility_form.html.erb
+++ b/app/views/branded/plans/_visibility_form.html.erb
@@ -13,15 +13,15 @@
       <legend class="form-control-static">
         <%= _('Public or organisational visibility is intended for finished plans.') %>
         <br><br>
-        <%= _('In order to make your plan visible you must have completed the following:') %>
+        <%= _('In order to make your plan visible you must:') %>
         <ul>
           <li>
             <% if plan.complete? %><span class="fa fa-check green"><span class="sr-only">Complete: </span></span><% else %><span class="fa fa-times red"><span class="sr-only">Incomplete: </span></span><% end %>
-            <%= (_("answered at least %{percentage}%% of questions on the %{write_plan_link} panel") % { percentage: Rails.configuration.x.plans.default_percentage_answered, write_plan_link: link_to(_('Write Plan'), edit_plan_path(plan.id, phase: plan.phases&.first&.id)) }).html_safe %>
+            <%= (_("have answered at least %{percentage}%% of questions on the %{write_plan_link} panel") % { percentage: Rails.configuration.x.plans.default_percentage_answered, write_plan_link: link_to(_('Write Plan'), edit_plan_path(plan.id, phase: plan.phases&.first&.id)) }).html_safe %>
           </li>
           <li>
             <% if !plan.is_test? %><span class="fa fa-check green"><span class="sr-only">Complete: </span></span><% else %><span class="fa fa-times red"><span class="sr-only">Incomplete: </span></span><% end %>
-            <%= (_("plan is not flagged as a mock project on the %{project_details_link} panel") % { project_details_link: link_to(_('Project Details'), edit_plan_path(plan.id))}).html_safe %>
+            <%= (_("make sure the plan is not flagged as a mock project on the %{project_details_link} panel") % { project_details_link: link_to(_('Project Details'), plan_path(plan.id))}).html_safe %>
           </li>
         </ul>
       </legend>
