--- a/app/views/branded/home/_welcome.html.erb
+++ b/app/views/branded/home/_welcome.html.erb
@@ -3,7 +3,7 @@
     <h1>
       <%= _('News') %>
     </h1>
-    <div class="dmp-visit">
+    <div class="dmp-visit" data-toggle="modal" data-target="#dmpVisitModal">
       <h2><%= _('First time visiting?') %></h2>
       <p><%= _('Discover DMP OPIDoR in three minutes!') %></p>
       <i class="fa fa-circle-play" aria-hidden="true"></i>
@@ -13,3 +13,18 @@
     <dmp-news-page props-json='{ "locale": "<%= locale %>" } '/>
   </div>
 </div>
+<div class="modal fade" id="dmpVisitModal" tabindex="-1" role="dialog" aria-labelledby="dmpVisitModal" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>        
+        <!-- 16:9 aspect ratio -->
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.canal-u.tv/chaines/callisto/embed/115986?t=0" id="video"  allowscriptaccess="always" allow="autoplay"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> 
