--- a/app/views/branded/plans/_request_feedback_form.html.erb
+++ b/app/views/branded/plans/_request_feedback_form.html.erb
@@ -12,7 +12,7 @@
       %>
       </p>
       <div class="well well-sm">
-        <%= sanitize current_user.org.feedback_msg.to_s % { user_name: current_user.name(false), plan_name: plan.title } %>
+        <%= sanitize current_user.org.feedback_msg.to_s % { user_name: current_user.name(false), plan_name: plan.title, organisation_email: current_user.org.contact_email } %>
       </div>
       <p><%= _('You can continue to edit and download the plan in the interim.') %></p>
       <div class="form-group col-xs-8">
