made fineprint on search field of public plans more specific

--- a/app/assets/stylesheets/dmptool_v5/overrides.scss
+++ b/app/assets/stylesheets/dmptool_v5/overrides.scss
@@ -610,3 +610,8 @@ div.citation span {
 #editorial-board div.row div.board-bio {
   padding-left: 35px;
 }
+
+.c-search .fineprint {
+  font-size: 0.7rem;
+  font-weight: 400;
+}
