--- a/app/views/branded/plans/_share_form.html.erb
+++ b/app/views/branded/plans/_share_form.html.erb
@@ -158,7 +158,7 @@
       </div>
     </fieldset>
   <% end %>
-  <% if @plan.template.structured? && @plan_client_roles.any? %>
+  <% if @plan.template.structured?  %>
     <%= render partial: 'plans/share_third_party',locals: { administerable: administerable } %>
   <% end %>
 </div>
